# rcdata

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/rcdata/: __init__.py  base.py  config.py  io.py  mc.py  res.py  resource.py
tests/: test_base.py
